Added Login And Sign Up

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,10 @@
     <body >
       <img src="static/farm pic.jpg" class="img-fluid" alt="My Image">
       <div class=" lead overlay-text " style="color:black;">
-      <h1 class="text-center">Welcome to</h1>
+      <h1 class="text-center mt-4">Welcome to</h1>
         <h1 class="text-center">SMART AGRICULTURE SYSTEM</h1>
+        <p class="lead mt-2" style="font-size:26px;">Please Login Here</p>
+        <a href="{{url_for('login')}}" class="btn btn-dark btn-lg">Login</a>
       </div>
     </body>
   </html>
