Connected to MongoDB

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <title>Home</title>
+      {%include 'nav.html'%}
       {% include 'bootstrap.html' %}
       {% include 'style.css' %}
     </head>
