--- a/templates/style.css
+++ b/templates/style.css
@@ -5,6 +5,9 @@ body {
   background-color: #333; 
   color: #fff;
 }
+.x1{
+  
+}
 img {
   width: 100%;
   height: auto;
@@ -12,8 +15,8 @@ img {
 }
 .overlay-text {
   position: absolute;
-  top: 40%;
-  left: 53%;
+  top: 45%;
+  left: 50%;
   transform: translate(-50%, -50%);
   color: white;
   font-size: 36px;
