Added Data into MONGODB

--- a/templates/login.html
+++ b/templates/login.html
@@ -16,17 +16,26 @@
                         class="img-fluid" alt="Phone image">
                     </div>
                     <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-                      <form>
+                      {% with messages = get_flashed_messages() %}
+                      {% if messages %}
+                        <ul class="flash">
+                          {% for message in messages %}
+                            <li>{{ message }}</li>
+                          {% endfor %}
+                        </ul>
+                      {% endif %}
+                    {% endwith %}
+                      <form method="post">
                         <h1 class="text-center lead mb-4" style="font-size: 32px;"><b>LOGIN HERE</b></h1>
                         <div class="form-outline mb-4">
-                          <input type="Username" id="username" class="form-control form-control-lg" placeholder="Enter Username" />
-                          <label class="form-label" for="form1Example13"><b>Username</b></label>
+                          <input type="Username" name="username" id="username" class="form-control form-control-lg" placeholder="Enter Username" />
+                          <label class="form-label" name="username" for="form1Example13"><b>Username</b></label>
                         </div>
               
                         <!-- Password input -->
                         <div class="form-outline mb-4">
-                          <input type="password" id="form1Example23" class="form-control form-control-lg" placeholder="Enter Password" />
-                          <label class="form-label" for="form1Example23"><b>Password</b></label>
+                          <input type="password" name="password" id="form1Example23" class="form-control form-control-lg" placeholder="Enter Password" />
+                          <label class="form-label" name="password" for="form1Example23"><b>Password</b></label>
                         </div>
               
                         <div class="d-flex justify-content-around align-items-center mb-4">
@@ -35,11 +44,17 @@
                             <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
                             <label class="form-check-label" for="form1Example3"> Remember me </label>
                           </div>
+                          
+
                           <a href="#!">Forgot password?</a>
                         </div>
-              
+                        {% if error %}
+                        <div class="alert alert-danger mt-3" role="alert">
+                            {{ error }}
+                        </div>
+                        {% endif %}
                         <!-- Submit button -->
-                        <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
+                        <button href="{{url_for('signup')}}" type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
               
                         <div class="divider d-flex align-items-center my-4">
                           <p class="text-center fw-bold mx-3 mb-0 text-muted">Don't Have an Account? </p>
@@ -58,6 +73,7 @@
                           <i class="fab fa-twitter me-2"></i>Continue with Twitter</a>
               
                       </form>
+                     
                     </div>
                   </div>
                 </div>
