--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,6 +7,6 @@
         {%include 'bootstrap.html'%}
     </head>
     <body class="container">
-        <h1 class="lead text-center">This is Home Page</h1>
+        <h1 class=" text-center">This is Home Page</h1>
     </body>
 </html>
