--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,9 +4,59 @@
         <title>
             Home Page
         </title>
+        {%include 'nav.html'%}
+       {%include 'style.css'%}
         {%include 'bootstrap.html'%}
     </head>
-    <body class="container">
-        <h1 class=" text-center">This is Home Page</h1>
+    <body style="background-color: #d2cdc8; color: #fff;  ">
+        <h class="mt-2">Home Page</h>
+        <h1 class="text-center mt-4 " style="font-family: system-ui, 
+        -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+         'Open Sans', 'Helvetica Neue', sans-serif; color:black;">WELCOME...Step-01
+         </h1>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h2 class="mb-2" style="font-family:system-ui,
+                     -apple-system, BlinkMacSystemFont, 'Segoe UI',
+                      Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 
+                      'Helvetica Neue', sans-serif; color:black;"> Carefully Follow These Steps...
+                      </h2>
+<div class="container mt-5" id="id1">
+    <div class="position-relative">
+        <div class="custom-div" style="position: absolute; left: 15%; top: 90px; padding: 100px;">
+            
+    <h2 style="font-family:system-ui, -apple-system, BlinkMacSystemFont,
+     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+      sans-serif; color:black;">Select Crop Season
+      </h2>
+    
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="cropSeasonDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Select Season
+        </button>
+        <div class="dropdown-menu" aria-labelledby="cropSeasonDropdown">
+            <a class="dropdown-item" href="{{url_for('kharif')}}">Kharif</a>
+            <a class="dropdown-item" href="#">Rabi</a>
+            <a class="dropdown-item" href="#">Zaid</a>
+        </div>
+    </div>
+        </div>
+    </div>
+</div>
+                      
+                </div>
+                
+                <div class="col-sm-6">
+                    
+                    <img src="static\season pic.jpg" class="img-fluid" alt="Your Image">
+                </div>
+            </div>
+        </div>
+        {%include 'footer.html'%}
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
     </body>
 </html>
