--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-dark bg-dark">
+<div class="mb-4">
+<nav class=" navbar fixed-top navbar-dark bg-dark">
     <a class="navbar-brand" href="#">SMART AGRICULTURE SYSTEM</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -18,5 +19,7 @@
           <a class="nav-link disabled" href="#">Disabled</a>
         </li>
       </ul>
+      
     </div>
   </nav>
+  </div>
