--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark text-center text-lg-start mt-4">
+<footer class="bg-dark text-center text-lg-start">
     <div class="container p-4">
       
       <div class="row">
