--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,18 @@
       {% include 'style.css' %}
     </head>
     <body >
-      <img src="static/farm pic.jpg" class="img-fluid" alt="My Image">
+      <img src="static\Screenshot (94).png" class="img-fluid" style="filter: blur(4px);" alt="My Image">
       <div class=" lead overlay-text " style="color:black;">
       <h1 class="text-center mt-4">Welcome to</h1>
         <h1 class="text-center">SMART AGRICULTURE SYSTEM</h1>
         <p class="lead mt-2" style="font-size:26px;">Please Login Here</p>
         <a href="{{url_for('login')}}" class="btn btn-dark btn-lg">Login</a>
+        <p class="mt-4" style="font-size: 30px; color:blanchedalmond;position: absolute; top: 180%; left: 10%;"><b>Everything Now At Your Fingertips...</b> </p>
       </div>
+      {%include 'footer.html'%}
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+      
     </body>
   </html>
