--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
 <div class="mb-4">
 <nav class=" navbar fixed-top navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">SMART AGRICULTURE SYSTEM</a>
+    <a class="navbar-brand">SMART AGRICULTURE SYSTEM</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,7 +16,7 @@
           <a class="nav-link" href="#">Pricing</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <a class="nav-link" href="{{url_for('login')}}">Login</a>
         </li>
       </ul>
       
