--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
     <body >
       <img src="static\Screenshot (94).png" class="img-fluid" style="filter: blur(4px);" alt="My Image">
       <div class=" lead overlay-text " style="color:black;">
-      <h1 class="text-center mt-4">Welcome to</h1>
-        <h1 class="text-center">SMART AGRICULTURE SYSTEM</h1>
+      <h1 class="text-center mt-4"><b>Welcome to</b></h1>
+        <h1 class="text-center"><b>SMART AGRICULTURE SYSTEM</b></h1>
         <p class="lead mt-2" style="font-size:26px;">Please Login Here</p>
         <a href="{{url_for('login')}}" class="btn btn-dark btn-lg">Login</a>
         <p class="mt-4" style="font-size: 30px; color:blanchedalmond;position: absolute; top: 180%; left: 10%;"><b>Everything Now At Your Fingertips...</b> </p>
