Added Designs and Enhancements

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,28 +1,45 @@
-<footer class="bg-dark text-center text-lg-start">
-    <div class="container p-4">
-      
-      <div class="row">
-        
-        <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-          <h5 class="text-uppercase"><u>My Links</u></h5>
-           <a class="nav-link active" aria-current="page" href="https://linkedin.com/in/jaya-krishna-gaddam-92a62221b" target="_blank">Linked IN</a>
-           <a class="nav-link active" aria-current="page" href="https://leetcode.com/jayakrishna_fyi/" target="_blank">Leet Code</a>
-          <a class="nav-link active" aria-current="page" href="https://github.com/jayakrishnagaddam" target="_blank">GitHub</a>
-            <a class="nav-link active" aria-current="page" href="https://www.codechef.com/users/thisiskrishna9" target="_blank">Codechef</a>
-        </div>
-        <div class="col-lg-6 col-md-30 mb-4 mb-md-0" style="left: 20px;">
-          <h5 class="text-uppercase"><u>Social Links</u></h5>
-           <a class="nav-link active" aria-current="page" href="https://www.instagram.com/jayakrishna_fyi" target="_blank">Instagram</a>
-          <a class="nav-link active" aria-current="page" href="https://twitter.com/jayakrishna_fyi" target="_blank">X (Formerly Twitter)</a> 
-          <a class="nav-link active" aria-current="page" href="https://www.facebook.com/jayakrishna.gaddam.56" target="_blank">Facebook</a> 
-          <a class="nav-link active" aria-current="page" href="https://www.threads.net/@jayakrishna_fyi" target="_blank">Threads</a>
-        </div>
-        
-      </div>
+
+<head>
+  {%include 'bootstrap.html'%}
+  <style>
+    #sa{
+      color: antiquewhite;
+    }
+  </style>
+</head>
+<footer class="bg-dark text-center text-lg-start mt-4">
+  <div id="sa" class="container p-4">
     
+    <div class="row">
+      
+      <div id="sa" class="col">
+        <h5 class="text-uppercase"><u>My Links</u></h5>
+         <a class="nav-link active" aria-current="page" href="https://github.com/jayakrishnagaddam" target="_blank">GitHub 🧑‍💻</a>
+         <a class="nav-link active" aria-current="page" href="https://linkedin.com/in/jaya-krishna-gaddam-92a62221b" target="_blank">Linked IN ✨</a>
+         <a class="nav-link active" aria-current="page" href="https://leetcode.com/jayakrishna_fyi/" target="_blank">Leet Code 👍</a>
+         <a class="nav-link active" aria-current="page" href="https://www.codechef.com/users/thisiskrishna9" target="_blank">Codechef 🧠</a>
+      </div>
+      <div class="col"></div>
+      <div class="col"></div>
+      <div class="col mt-3">
+        
+
+      </div>
+      <div class="col"></div>
+      <div class="col"></div>
+      <div class="col">
+        <h5 class="text-uppercase"><u>Social Links</u></h5>
+         <a class="nav-link disabled" aria-current="page" href="https://www.instagram.com/jayakrishna_fyi" target="_blank">Instagram 😶‍🌫️</a>
+        <a class="nav-link active" aria-current="page" href="https://twitter.com/jayakrishna_fyi" target="_blank">X (Twitter) 🐥</a> 
+        <a class="nav-link active" aria-current="page" href="https://www.facebook.com/jayakrishna.gaddam.56" target="_blank">Facebook 👻</a> 
+        <a class="nav-link active" aria-current="page" href="https://www.threads.net/@jayakrishna_fyi" target="_blank">Threads 🧵</a>
+      </div>
+      
     </div>
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2023 Copyright : Jaya Krishna Gaddam
-     
-    </div>
-  </footer>
+  
+  </div>
+  <div class="text-center p-3" style="color:antiquewhite; background-color: rgba(0, 0, 0, 0.2);">
+    © 2023 Copyright : Jaya Krishna Gaddam
+   
+  </div>
+</footer>
