--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
             }
             
             #image {
-              filter: blur(4px);
+              filter: blur(5px);
                 width: 100%;
                 height: 100vh; /* Set the height to cover the entire viewport */
                 object-fit: cover;
@@ -39,7 +39,7 @@
              <p class="mt-3" style="color: black;">
               <b> PRICES PREDICTION SYSTEM </b>
              </p>
-             <a type="button" href="{{url_for('login')}}"class="mt-4 btn btn-warning">Login</a>
+             <a type="button" href="{{url_for('login')}}"class="mt-4 btn btn-warning">Login Here</a>
                       </h1>
                       
 {%include 'footer.html'%}
