--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,24 +1,40 @@
-<div class="mb-4">
-<nav class=" navbar fixed-top navbar-dark bg-dark">
-    <a class="navbar-brand">Prices Prediction</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<style>
+  
+  .navbar {
+    background-color: rgb(0, 0, 0); 
+  }
+  #navid{
+  font-style: initial;
+    color: antiquewhite !important;
+  }
+</style>
+
+
+<nav id="navid" class="navbar navbar-expand fixed-top bg-black">
+  <div class="container-fluid">
+    <a style="color:antiquewhite;" class="navbar-brand">Prices Prediction System</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-lg-0 text-center">
+        
+        <li class="nav-item">
+          <a style="color: antiquewhite;" class="nav-link active" aria-current="page" href="#about">About us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a style="color: antiquewhite;" class="nav-link active" href="#requirements">Local Markets</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a style="color: antiquewhite;" class="nav-link active" href="contactus">Contact us</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('login')}}">Login</a>
-        </li>
-      </ul>
+       </ul>
+
+  <li>
+    <a style="text-decoration: none; color: antiquewhite;" class="active" href="https://jayakrishnaprofile.onrender.com" target="_blank">Developer Information</a>
+     
+  </li>
+    
     </div>
-  </nav>
   </div>
+</nav>
