--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,8 +5,8 @@
             Price Star 🔸 Home
         </title>
         {%include 'bootstrap.html'%}
-       
-        {%include 'nav.html'%}
+
+        {%include 'homenav.html'%}
         <style>
        
 
@@ -159,9 +159,10 @@ body {
                         </a>
                       </div>
                     </div>
-                </div>>
+                </div>
            </div>
             </div>
+            <a href="example" class="btn btn-primary" role="button"> Button</a>
             {%include 'footer.html'%}
         </body>
     </head>
