--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
         </style>
         
           {%include 'bootstrap.html'%}
-          {%include'nav.html'%}
+          {%include'indexnav.html'%}
       </head>
       <body id="bod">
           <div>
