--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -162,7 +162,12 @@ body {
                 </div>
            </div>
             </div>
-            <a href="example" class="btn btn-primary" role="button"> Button</a>
+            
+     <div class="text-center"><p>Predator is a Pre-Trained Artificial Intelligence Model that uses past data of different things 
+         and needs that predicts past band future prices and values. Note: Predator can produce wrong assumptions and predictions 
+         kindly observe and act accordingly...</p>
+         <a href="example" class="btn btn-primary" role="button">Enter Predator</a>
+     </div>
             {%include 'footer.html'%}
         </body>
     </head>
