--- a/templates/example.html
+++ b/templates/example.html
@@ -45,23 +45,23 @@
                     <h2 style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">Predict Prices</h2>
                 </div>
                 <ul class="contents-list px-2">
-                    <h4 style="font-family:cursive;">Daily Needs 🥕</h4>
+                    <h4 style="font-family:cursive;">Daily Needs </h4>
                     <li><a href="javascript:void(0)" onclick="loadContent('vegetable.html')">Vegetables</a></li>
                     <li><a href="#section2">Fruits Prices</a></li>
                     <li><a href="#section3">Room Rent Analysis</a></li>
                     <li><a href="#section3">Electronics Price Analysis</a></li>
-                    <h4 style="font-family:cursive;"> Health Care ❤️‍🩹</h4>
+                    <h4 style="font-family:cursive;"> Health Care </h4>
                     <li><a href="#section2">Patient Flow</a></li>
                     <li><a href="#section3">Diseases Prediction</a></li>
                     <li><a href="#section2">Pandemic Prediction</a></li>
                     
-                    <h4 style="font-family:cursive;">Marketing 🕴️</h4>
+                    <h4 style="font-family:cursive;">Marketing </h4>
                     <li><a href="#section2">Economics</a></li>
                     <li><a href="#section1">Stock Prices</a></li>
                     <li><a href="#section3">Fraud Detection</a></li>
                     <li><a href="#section1">Event Prediction</a></li>
                     <li><a href="#section2">Market Trend Analysis</a></li>
-                    <h4 style="font-family:cursive;">Weather ⛈️</h4>
+                    <h4 style="font-family:cursive;">Weather </h4>
                     <li><a href="#section2">Weather Forecasting</a></li>
                     <li><a href="#section3">Natural Disasters Prediction</a></li>
                     <li><a href="#section3">Climate Prediction</a></li>
