--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -40,14 +40,13 @@
 }
 body {
     padding-top:5%;
-    
 }
 </style>
  <body class="text-center container">
             <div class="background-container"></div>
-            <h2 class="">Welcome {{name}} !</h2>
+            <h2 class="mb-4">Welcome {{name}} !</h2>
             <div>
-                <h2>Unveiling Price Star, Your AI Powered Pricing prediction System.</h2>
+                <h2 class="mt-2">Unveiling Price Star, Your AI Powered Pricing prediction System.</h2>
                 <p class="text-center" style="font-size: 20px;">We Provide accurate predictions to assist consumers and businesses in making informed
                      decisions. Harnessing the power of predictive analytics, Price Star empowers users 
                      to anticipate market fluctuations and optimize their purchasing strategies.</p>
